<?xml version="1.0"?>
<resources>
    <string name="app_name">Lajan Pa\'m</string>
    <string name="titre_categorie">Catégorie</string>
    <string name="titre_compte">Compte</string>
    <string name="titre_PRIX">Prix</string>
    <string name="titre_note">Note</string>
    <string name="titre_bank">Bank</string>
    <string name="titre_noducompte">No du compte</string>
    <string name="titre_typedecompte">Type du compte</string>
    <string name="titre_selectcompte">Selectionnez un compte</string>
    <string name="titre_selectcategorie">selectionnez une categorie</string>
    <string name="titre_choix_langue">Selectionner une langue</string>
    <string name="semaine">SEMAINE</string>
    <string name="jour">JOUR</string>
    <string name="mois">MOIS</string>
    <string name="nom_utilisateur">Utilisateur</string>
    <string name="pass_utilisateur">Mot de passe</string>
    <string name="bt_login">Connecter</string>
    <string name="pas_decompte">Vous n\'avez pas un compte ?</string>
    <string name="creer_un_compte">Créer un compte !</string>
    <string name="rapport_et_stat">Rapport et statistique</string>
    <string name="droitreserve">©Tous droits reservés!</string>
    <string name="determination">Determination++ | 2019</string>
    <string name="langue">Langues</string>
    <string name="nomuti">Nom</string>
    <string name="prenomuti">Prénom</string>
    <string name="confirmerpass">Confirmer mot de passe</string>
    <string name="btnsignup">Enregistrer</string>

    <string name="menuajoutDepense">Ajouter Dépense</string>
    <string name="menuRecher">Rechercher ...</string>
    <string name="menuParam">Paramètre ...</string>
    <string name="menuApropos">A propos</string>
    <string name="menudeconet">Déconnexion</string>
    <string name="titreacuueil">Vu d\'ensemble</string>
    <string name="adhesionOui">Oui</string>
    <string name="adhesionNon">Non</string>
    <string name="adhesionAnnuler">Annuler</string>
    <string name="nomCategir">Saisir le nom de la Catégorie</string>
    <string name="enregis_succes">Enregistré avec succès!!!</string>
    <string name="motdepassdident">Le mot de passe doit être identique!!!</string>
    <string name="lepseudo">Ce pseudo est déja Utilisé!</string>
    <string name="remplirleschan">Tous les champs sont obligatoires!!!</string>
    <string name="ajouterunecat">Ajouter Catégorie</string>
    <string name="champobl">Le champs est obligatoire!!!</string>
    <string name="catexistedeja">Cette catégorie existe déja!</string>
    <string name="ajouter_compte">Ajouter un Compte</string>
    <string name="adhesionOk">Ok</string>
    <string name="compteexist">Ce compte existe déja!</string>
    <string name="ajouterSolde">Ajouter Solde</string>
    <string name="visualisercomp">Visualiser et modifier Compte</string>
    <string name="comptecashmo">Compte CASH / Modifier</string>
    <string name="modifSucces">modifié avec succès</string>
    <string name="supp_une_cat">Supprimer une Catégorie</string>
    <string name="titreSupreCat">Voulez-vous supprimer cette catégorie?</string>
    <string name="suppress_succes">Suppression Catégorie avec succès!!!</string>
    <string name="operEchou">Opération echouée!!!</string>
    <string name="modifCat">Modifier  Catégorie</string>
    <string name="titre_group_par">Groupe</string>
    <string name="text_depense">Dépense</string>
    <string name="text_solde">Solde</string>
    <string name="aucune_depense">Aucune Dépense !</string>
    <string name="veuxtudeconnecter">Voulez-vous déconnecter de l\'application?</string>
    <string name="aucune_depense_enre">Aucune dépense n\'est Enregistrée aujourd\'hui!</string>
    <string name="exporterpdf">Exporter Rapport (PDF)</string>
    <string name="gest_cat">Gestion de Catégorie</string>
    <string name="gest_compte">Gestion de Compte</string>
    <string name="autres">Autres</string>

    <string-array name="spincategorie">
        <item>Transport</item>
        <item>Sante</item>
        <item>Nourriture</item>
        <item>Boissons</item>
        <item>Divers</item>
        <item>Loisirs</item>
    </string-array>

    <string-array name="arraylangues">
        <item>Select une langue</item>
        <item>Anglais</item>
        <item>Francais</item>
    </string-array>

    <string-array name="grouppar">
        <item>Aujourd\'hui</item>
        <item>Semaine</item>
        <item>Mois</item>
    </string-array>

    <string-array name="gestioncompte">
        <item>Ajouter un compte</item>
        <item>Visualiser/Activer compte</item>
    </string-array>

    <string-array name="typecompte">
        <item>Courant</item>
        <item>Epargne</item>
    </string-array>

    <string-array name="gestioncat">
        <item>Ajouter une categorie</item>
        <item>Modifier une categorie</item>
        <item>Supprimer une categorie</item>
    </string-array>

    <string-array name="autres">
        <item>Rapport et Statistique</item>
        <item>Exporter le rapport en pdf</item>
    </string-array>

    <string name="droouverture" translatable="false">Ouvrir Navigation</string>
    <string name="drfermeture" translatable="false">Fermer Navigation</string>

    <string name="apropos">A Propos</string>
    <string name="devloper">Cette Application a été developpée par 6 Developpeurs de l’université INUKA.</string>
    <string name="ajouter_depense">Ajouter Dépense</string>
    <string name="saisir_lenom">Saisir le nom</string>
    <string name="adhesion_creer">Créer</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="selectCatamodif">Veuillez selectionner une catégorie</string>
    <string name="champCatnepeutvide">Remplir le champs Catégoie</string>
    <string name="adhesionsup">Voulez-vous supprimer cette dépense?</string>
    <string name="argentinsufissat">"Vous n'avez pas suffisament d'argent sur ce compte, Veuillez changer de compte ou Ajoutez d'argent</string>
    <string name="titre_date">Date</string>
    <string name="text_modifier">Modifier</string>
    <string name="text_suppimer">Supprimer</string>
    <string name="message">Aucune Catégorie n\'a été Enregistrée!</string>
    <string name="message1">Message</string>
    <string name="text_creer">Créer</string>
    <string name="text_detail">Dépense Détail</string>
    <string name="text_categorie">Nom de la Catégorie</string>
    <string name="pseudoincorret">Pseudo ou mot de passe incorrect!!!"</string>
    <string name="text_voirdetail">Voir detail</string>
    <string name="messageoption">Message d\'option</string>
    <string name="lang_fr">Français</string>
    <string name="lang_en">Anglais</string>
    <string name="rienEnregistre">Vous ne pouvez pas exporter de Rapport sans rien enregistrer !!</string>
    <string name="soldetotal">Solde Total</string>
    <string name="deptotal">Depense Totale</string>
    <string name="btnajouter">Ajouter</string>
    <string name="deTotal">2.Total</string>
    <string name="catcompte">1. Categorie / Compte</string>
    <string name="text_parametr">Parametre</string>
</resources>
